stop auto focusing menu on mobile

--- a/apps/frontend/src/pages/index.module.scss
+++ b/apps/frontend/src/pages/index.module.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  gap: 80px;
+  gap: 60px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
